# online_chat

./: README.md  docker-compose.yml  pyproject.toml
src/: create_fastapi_app.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_07_28_1113-b407d1f56a78_create_user_table.py  2024_07_28_2012-fe340a793a95_create_access_tokens_table.py
src/api/api_v1/: __init__.py
src/core/: __init__.py  config.py
src/core/authentication/: transport.py
src/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
