[tool.poetry]
name = "online-chat"
version = "0.1.0"
description = ""
authors = ["Kamil Ayupov <ayupovkamil@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
